:bug: Fix text on focused buttons being unreadable in the Lucas Dracula UI theme

--- a/src/styl/inputs.styl
+++ b/src/styl/inputs.styl
@@ -80,12 +80,10 @@ input[type="reset"],
         background acttext
         color background
         {transshort}
-        if (themeDark)
-            color foreground
-        if (!themeDark)
-            border-color accent1
         svg
             color background
+        if (!themeDark)
+            border-color accent1
         if (themeDark)
             color foreground
             svg
